--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </style>
   </div>
   <div class="section_welcome">
-    <div class="title">THE ONE PERCENT</div>
+    <div style="color: white;" class="title">THE ONE PERCENT</div>
     <a data-w-id="bd089833-be3f-794e-be9c-02525ba72347" style="
           -webkit-transform: translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0)
             rotateY(0) rotateZ(-4deg) skew(0, 0);
@@ -119,36 +119,27 @@
             rotateY(0) rotateZ(-4deg) skew(0, 0);
           transform: translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0)
             rotateZ(-4deg) skew(0, 0);
-        " href="#" class="continue w-button" target="blank">ENTER
+        " href="#" class="continuee w-button" target="blank">ENTER
     </a>
   </div>
   <div class="section_hero">
-    <a data-w-id="4e8d95c4-39d8-cf17-89f1-7575d3437792" style="
-          -webkit-transform: translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0)
-            rotateY(0) rotateZ(-4deg) skew(0, 0);
-          -moz-transform: translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0)
-            rotateY(0) rotateZ(-4deg) skew(0, 0);
-          -ms-transform: translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0)
-            rotateY(0) rotateZ(-4deg) skew(0, 0);
-          transform: translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0)
-            rotateZ(-4deg) skew(0, 0);
-        "
-      href="https://www.dextools.io/app/en/solana/pair-explorer/8gmUDfwjLVCgsrLAaXiJWjopsSu2gAs39puu71HBn4E5?t=1730473311146"
-      class="buy w-button">CHART</a>
+    <a href="https://www.dextools.io/app/en/solana/pair-explorer/8gmUDfwjLVCgsrLAaXiJWjopsSu2gAs39puu71HBn4E5?t=1730478334267"
+      class="buyy w-button">DEXTOOLS</a>
 
-    <h2 class="ttl">THE ONE PERCENT</h2>
-    <img src="images/logo-b.png" loading="lazy" sizes="100vw" alt="" class="chara_hero" />
+    <h2 style="color: white;" class="ttl">THE ONE PERCENT</h2>
+    <img style="border-radius: 50%;" src="images/one.png" loading="lazy" sizes="100vw" alt="" class="chara_hero" />
     <div class="links_hero">
       <a href="https://t.me/the1percentportal" class="tg w-button" target="blank"></a>
       <a href="https://x.com/1percentsolana" class="x w-button" target="blank"></a>
       <a href="https://dexscreener.com/solana/8gmudfwjlvcgsrlaaxijwjopssu2gas39puu71hbn4e5" class="dex w-button"
         target="blank"></a>
+      <a href="https://www.coingecko.com/en/coins/1-percent" class="cg w-button" target="blank"></a>
     </div>
   </div>
   <div class="separator_ca">
     <div class="block_ca">
       <div class="ca_in">
-        <div style="color: white;" class="ca">3dwu2tw7kBFZvWEdJMbPCGm7MBwgziABChLV1kGspump</div>
+        <div style="color: #000000; letter-spacing: 2px;" class="ca">3dwu2tw7kBFZvWEdJMbPCGm7MBwgziABChLV1kGspump</div>
         <div class="ca_mobile">
           3dwu2tw7kBFZvWEdJMbPCGm7MBwgziABChLV1kGspump
         </div>
@@ -157,9 +148,18 @@
     </div>
   </div>
   <div class="section_about_top">
-    <div class="h1">THE ONE PERCENT</div>
+    <div style="color: white;" class="h1">THE ONE PERCENT</div>
     <div style="display: flex; align-items: center; justify-content: center">
-      <img style="width: 60%; max-width: 90%; border-radius: 12px" src="./images/img2.jpg" alt="" />
+      <!-- <img style="width: 60%; max-width: 90%; border-radius: 12px" src="./images/img2.jpg" alt="" /> -->
+      <div >
+        <blockquote class="twitter-tweet">
+          <p lang="und" dir="ltr">The 1% <a href="https://t.co/VjfIFgCWJT">pic.twitter.com/VjfIFgCWJT</a></p>&mdash; 1%
+          (@1percentsolana) <a
+            href="https://twitter.com/1percentsolana/status/1850528845390045513?ref_src=twsrc%5Etfw">October 27,
+            2024</a>
+        </blockquote>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
     </div>
   </div>
   <div class="section_about_bottom" style="padding-bottom: 100px">
@@ -173,10 +173,10 @@
     </div>
   </div>
   <div class="section_tokenomics">
-    <div class="wave02"></div>
-    <div class="wave_block"></div>
+    <!-- <div class="wave02"></div> -->
+    <!-- <div class="wave_block"></div> -->
     <div class="h1 h1_2" style="color: #fff">TOKENOMICS</div>
-    <img src="images/tb.png" loading="lazy" sizes="(max-width: 767px) 80vw, 493.82501220703125px" alt=""
+    <img style="width: 650px; height: 380px; max-width: 90%; padding: 40px; border-radius: 12px; margin-top: 30px;" src="images/tok.jpg" loading="lazy" sizes="(max-width: 767px) 80vw, 493.82501220703125px" alt=""
       class="chara_tokenomics" />
     <div class="block_tokenomics">
       <div class="tokenomics_in">
@@ -205,11 +205,15 @@
   </div>
   <div class="section_join" style="padding-bottom: 100px">
     <div class="h1 h1_3">JOIN<br />US</div>
+    <div style="margin-top:30px">
+      <img style="border-radius: 50%; width: 350px; height: 300px;" src="./images/plane.jpg" alt="">
+    </div>
     <div class="block_links">
       <a href="https://t.me/the1percentportal" class="tg w-button" target="blank"></a>
       <a href="https://x.com/1percentsolana" class="x w-button" target="blank"></a>
-      <a href="https://dexscreener.com/solana/8gmudfwjlvcgsrlaaxijwjopssu2gas39puu71hbn4e5" class="dex w-button"
+      <a href="https://dexscreener.com/solana/8gmudfwjlvcgsrlaaxijwjopssu2gas39puu71hbn4e5" class="cg w-button"
         target="blank"></a>
+      <a href="https://www.coingecko.com/en/coins/1-percent" class="dex w-button" target="blank"></a>
     </div>
     <!-- <img
         src="./images/IMG.jpg"
@@ -221,7 +225,7 @@
       />
       <div class="grass_footer"></div> -->
 
-    <div style="margin-top: 10%">
+    <!-- <div style="margin-top: 10%">
       <div class="gallery-section">
         <h2 style="font-family: Super Squad, sans-serif" class="h2">
           ONE PERCENT CLUB
@@ -238,7 +242,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66d6f0ff999739fdb61af598"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
